--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
+		<li id="blog"><a href="/blog">blog</a></li>		
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-		<li id="contact"><a href="mailto:georgemihaila@my.unt.edu">contact</a></li>
+		<li id="contact"><a href="mailto:dobrimihai@yahoo.com">contact</a></li>
 	</ul>
 </div>
