--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>
-			{{ page.title }} | Mihai Dobri
+			{{ page.title }} | George Mihaila
 		</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
