--- a/css/about.css
+++ b/css/about.css
@@ -22,3 +22,4 @@
   div #github:before{content:""}
   div#about div div#links div #linkedin:before{content:""}
   div#about div div#links div #stackoverflow:before{content:""}
+  div#about div div#links_3 div{display:inline-block;font-size:.95em;min-width:150px;text-align:center}
