--- a/css/about.css
+++ b/css/about.css
@@ -20,5 +20,5 @@
   div#about div div#links div{display:inline-block;min-width:30px;padding-bottom:10px;width:33.3%} */
   div#about div div#links div #website:before{content: ""}
   div #github:before{content:""}
-  div#about div div#links div #linkedin:before{content:""}
+  /* div#about div div#links div #linkedin:before{content:""} */
   div#about div div#links div #stackoverflow:before{content:""}
