--- a/css/header.css
+++ b/css/header.css
@@ -2,4 +2,4 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,400);
 div#header{border-bottom:1px solid #000;margin-bottom:30px;padding-top:30px;padding-bottom:20px;text-align:center}
 div#header #maintitle{margin-bottom:20px}
-div#header ul>li{display:inline-block;text-align:center;min-width:60px;width:16%}
+div#header ul>li{display:inline-block;text-align:center;min-width:60px;width:16%;padding:10px}
