--- a/css/about.css
+++ b/css/about.css
@@ -16,9 +16,10 @@
   div#about div#right h1{font-size:1.4em}
   div#about div#right p{margin-top:0px}
   div#about div#right ul{font-size:1.1em}
-  div#about div div#links{display:block;font-family:social_media;font-size:1.4em;margin-left:auto;margin-right:auto;margin-top:30px;text-align:center;width:70%}
+  div#about div div#links{display:block;font-family:social_media;font-size:1.9em;margin-left:auto;margin-right:auto;
+    margin-top:30px;text-align:center;width:100%}
 
-  div#about div div#links div #website:before{content: ""}
+  div#about div div#links div #website:before{content:""}
   div #github:before{content:""}
   div#about div div#links div #linkedin:before{content:""}
   div#about div div#links div #stackoverflow:before{content:""}
