--- a/css/about.css
+++ b/css/about.css
@@ -23,3 +23,24 @@
   div #github:before{content:""}
   div#about div div#links div #linkedin:before{content:""}
   div#about div div#links div #stackoverflow:before{content:""}
+
+  /* Twitter */
+.fa-twitter {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+  /* LinkedIn */
+.fa-linkedin-square {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+  /* GitHub */
+.fa-github-square {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+.fa-globe {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+.fa-medium {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+.fa-dropbox {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+
+.fa-skype {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%;}
+
+.fa-envelope {color: black;font-size:0.7em;text-align:center;padding-top: 10px}
