--- a/css/about.css
+++ b/css/about.css
@@ -24,8 +24,8 @@
 .fa-linkedin-square {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
   border-radius: 90%;}
   /* GitHub */
-.fa-github-square {background: black;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
-  border-radius: 90%;}
+.fa-github {background: black;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 100%;}
   /* Globe */
 .fa-globe {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
   border-radius: 90%;}
