--- a/css/about.css
+++ b/css/about.css
@@ -41,3 +41,6 @@
   /* Email */
 .fa-envelope {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
   border-radius: 90%}
+  /* Amazon */
+/* .fa-amazon {background: #55ACEE;color: white;padding: 10px;font-size: 20px;width: 20px;text-align:center;text-decoration:none;
+  border-radius: 90%} */
